<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hand"
        android:gravity="center"
        android:text="@string/etrajz"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/szem"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="5sp"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nagy_attila"
            android:textSize="24sp"
            android:textStyle="italic"
            android:padding="5sp"/>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cimem"
            android:textSize="24sp"
            android:textStyle="italic"
            android:padding="5sp"/>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gazdinfo"
            android:textSize="24sp"
            android:textStyle="italic"
            android:padding="5sp"/>

        <ImageButton
            android:id="@+id/magygomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="10sp"
            app:srcCompat="@drawable/button_magyar_ny" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="10sp"
            app:srcCompat="@drawable/button_nemet_ny" />


        <ImageButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="10sp"
            app:srcCompat="@drawable/button_bizonyitvanyaim" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/todo"
            android:gravity="center"
            android:padding="10sp"
            app:srcCompat="@drawable/button_hivas" />


    </LinearLayout>


</LinearLayout>



